# container_cad

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
docs/plans/: finger-pulls.md
examples/: finger_pull_config.json  sample_config.json  simple_config.json  two_cavity.step  two_cavity_config.json
src/cadbox/: __init__.py  cli.py  config.py  generator.py  models.py  packer.py  validator.py
src/cadbox/preview/: server.py  storage.py  ui.py
tests/: test_cadbox.py  test_finger_pulls.py
