[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadbox"
version = "0.1.0"
description = "Generate parametric CAD container boxes with inset cavities"
requires-python = ">=3.10"
dependencies = [
    "cadquery>=2.4",
    "click>=8.0",
    "pydantic>=2.0",
    "rectpack>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
cadbox = "cadbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
